tests/script_errors/single_quote/error.txt
Error: 
    1 | "
      | ^ It looks like you forgot to terminate a string with a closing '"'